# aruco_mapping

./: CMakeLists.txt
data/: maqui_front.ini
launch/: aruco_mapping.launch
nodes/: ghost_frame.py  localization_aruco.py  pepper_head_fix.py
src/: aruco_localization.cpp  aruco_mapping.cpp  optical_fake_localization.cpp
